# RapidRaw

./: .fallowrc.json  .gitignore  .prettierignore  AGENTS.md  AGPL_COMPLIANCE.md  CONTRIBUTING.md  RAW_EDITOR_PLAN.md  README.md  SECURITY.md  biome.json  bunfig.toml  eslint.config.js  i18next.config.ts  index.html  knip.jsonc  package-lock.json  package.json  tsconfig.base.json  tsconfig.json  visual-smoke.html  vite.config.js
src-tauri/: AGENTS.md  Cargo.toml  build.rs  deny.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/crates/rapidraw-ai/: Cargo.toml  build.rs
src-tauri/crates/rapidraw-codecs/: Cargo.toml
src-tauri/crates/rapidraw-color-reference/: Cargo.toml
src-tauri/crates/rapidraw-computational/: Cargo.toml
src-tauri/crates/rapidraw-types/: Cargo.toml
src-tauri/icons/: README.md
src-tauri/icons/ios/: README.md
src-tauri/lensfun_db/: README.md
src-tauri/render-abi/: render-abi.toml
src-tauri/src/: adjustment_utils.rs  ai_commands.rs  ai_processing.rs  album_management.rs  android_integration.rs  app_settings.rs  app_state.rs  auto_adjust.rs  bayer_hq.rs  cache_utils.rs  color_gpu_readback_probe.rs  community_presets.rs  culling.rs  deblur_api.rs  deblur_real_raw_proof.rs  deblur_render.rs  denoise_render.rs  denoising.rs  derived_output_provenance.rs  display_profile.rs  events.rs  exif_processing.rs  export_color_policy.rs  export_encoders.rs  export_output_targets.rs  export_postprocess.rs  export_processing.rs  file_management.rs  focus_real_raw_proof.rs  gamut_mapping.rs  gpu_context.rs  gpu_display.rs  gpu_processing.rs  gpu_textures.rs  hdr_artifact_sidecar.rs  hdr_real_raw_proof.rs  image_loader.rs  image_processing.rs  layer_mask_real_raw_proof.rs  lib.rs  (+30 more)
src-tauri/src/adjustments/: abi.rs  edit_document_v2.rs  mod.rs  parse.rs  scales.rs
src-tauri/src/ai/: ai_commands.rs  ai_commands_unavailable.rs  ai_connector.rs  ai_processing.rs  mod.rs  model_download.rs  model_registry.rs  person_part_parser.rs  person_segmentation.rs  runtime_service.rs  types.rs
src-tauri/src/app/: capabilities.rs  command_registration.rs  disabled_commands.rs  display_profile_service.rs  display_target.rs  events.rs  hdr_display_capability.rs  mod.rs  preview_session_service.rs  runtime.rs  runtime_environment.rs  services.rs  settings.rs  startup.rs  startup_file_handoff.rs  state.rs  window_lifecycle.rs
src-tauri/src/color/: adjustment_fields.rs  adjustment_utils.rs  auto_adjust.rs  auto_edit.rs  backend_differential_tests.rs  camera_input_transform.rs  controlled_profiles.rs  dehaze.rs  density.rs  display_hdr_hardware_tests.rs  display_profile.rs  gamut_mapping.rs  hdr_editing.rs  hdr_scopes.rs  icc_profiles.rs  lens_correction.rs  lens_database_service.rs  lut_processing.rs  mixer_render.rs  mod.rs  monochrome.rs  payload_residency_service.rs  perceptual_grading.rs  point_color.rs  provenance.rs  transform_descriptor.rs  visual_approval_artifacts.rs  white_balance.rs  working_to_output_transform.rs
src-tauri/src/computational/: command_registration.rs  deblur_cpu_reference.rs  deblur_render.rs  denoise_api.rs  denoise_artifact.rs  denoise_cpu_reference.rs  denoise_render.rs  denoise_service.rs  denoising.rs  grading_render.rs  mod.rs  retouch_render.rs  runtime_services.rs  wavelet_render.rs
src-tauri/src/detail/: mod.rs  multiscale.rs
src-tauri/src/editor/: command_registration.rs  image_service.rs  mod.rs  picker_commands.rs  preview_geometry.rs  preview_geometry_service.rs  viewer_sampling_service.rs
src-tauri/src/export/: batch_export_pipeline.rs  color_conformance_tests.rs  command_registration.rs  export_color_policy.rs  export_encoders.rs  export_postprocess.rs  export_processing.rs  job_registry.rs  mod.rs  runtime_services.rs
src-tauri/src/geometry/: mod.rs  perspective.rs  preview.rs
src-tauri/src/gpu/: color_gpu_readback_probe.rs  crash_marker_service.rs  generated_bindings.rs  gpu_context.rs  gpu_context_service.rs  gpu_display.rs  gpu_processing.rs  gpu_processing_service.rs  gpu_readback.rs  gpu_runtime.rs  gpu_textures.rs  mod.rs  pipeline_registry.rs  runtime_services.rs
src-tauri/src/io/: cache_utils.rs  exif_processing.rs  formats.rs  image_codecs.rs  image_loader.rs  image_open_session.rs  mod.rs  patch_assets.rs  reference_source_identity.rs  smart_preview_cache.rs  source_revision.rs  thumbnail_resources.rs
src-tauri/src/layers/: authoritative_layer.rs  mod.rs
src-tauri/src/merge/: atomic_derived_output.rs  command_registration.rs  computational_job.rs  derived_output_provenance.rs  hdr_artifact_sidecar.rs  mod.rs  panorama_opencv_spike.rs  panorama_stitching.rs  super_resolution.rs  tile_runtime.rs
src-tauri/src/panorama_utils/: processing.rs  stitching.rs
src-tauri/src/proofs/: denoise_real_raw_proof.rs  focus_real_raw_proof.rs  hdr_real_raw_proof.rs  layer_mask_real_raw_proof.rs  linear_gradient_mask_real_raw_proof.rs  mask_refinement_full_image_output_proof.rs  mod.rs  panorama_real_raw_proof.rs  retouch_clone_real_raw_proof.rs
src-tauri/src/raw/: bayer_hq.rs  camera_illuminant_conformance_tests.rs  color_graph_trace.rs  embedded_preview.rs  highlight_reconstruction.rs  mod.rs  negative_conversion.rs  negative_lab_auto_meter.rs  negative_lab_cmy_timing.rs  negative_lab_color_finish.rs  negative_lab_detail_finish.rs  negative_lab_hd_paper_curve.rs  negative_lab_neutral_axis.rs  negative_lab_optical_finish.rs  negative_lab_paper_profile.rs  negative_lab_retouch.rs  raw_open_edit_export_proof.rs  raw_processing.rs
src-tauri/src/render/: analytics_resources.rs  analytics_scheduler.rs  analytics_service.rs  artifact_identity.rs  color_node_conformance_tests.rs  color_node_registry.rs  cpu_edit_graph.rs  edit_graph.rs  film_characteristic_curve.rs  film_color_coupler.rs  film_density_grain.rs  film_emulation.rs  film_execution_plan.rs  film_look_render.rs  film_measured_monochrome.rs  film_monochrome.rs  film_optical_scatter.rs  film_print_scan.rs  film_profile_compiler.rs  film_profile_registry.rs  film_render_scheduler.rs  film_residual_lut.rs  film_resource_cache.rs  film_runtime_proof.rs  (+22 more)
(+4049 files in other folders)
