[package]
name = "RapidRAW"
description = "A blazingly-fast, non-destructive, and GPU-accelerated RAW image editor built with performance in mind."
authors = ["Timon Käch"]
edition = "2024"
rust-version = "1.95"

[workspace]
members = [
  ".",
  "crates/rapidraw-ai",
  "crates/rapidraw-codecs",
  "crates/rapidraw-computational",
  "crates/rapidraw-types",
]
resolver = "2"

[lib]
name = "rapidraw_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[features]
default = ["required-ci", "ai"]
ai = ["dep:rapidraw-ai"]
advanced-codecs = ["rapidraw-codecs/advanced"]
panorama-opencv-spike = ["rapidraw-computational/opencv-panorama"]
required-ci = ["advanced-codecs", "rapidraw-ai?/compile-only"]
tauri-test = ["tauri/test"]
validation-harness = []

[dependencies]
rapidraw-types = { path = "crates/rapidraw-types" }
rapidraw-ai = { path = "crates/rapidraw-ai", optional = true }
rapidraw-codecs = { path = "crates/rapidraw-codecs", default-features = false, features = ["jpeg"] }
rapidraw-computational = { path = "crates/rapidraw-computational" }
tauri = { version = "2.11", features = [ "macos-private-api", "rustls-tls", "unstable" ] }
tauri-plugin-dialog = "2.7.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
image = "0.25.10"
base64 = "0.22"
tauri-plugin-fs = "2.5.1"
rayon = "1.12.0"
rusqlite = { version = "0.38", features = ["bundled"] }
bitflags = "2.11"
blake3 = "1.8.5"
wgpu = "29.0"
pollster = "0.4"
bytemuck = { version = "1.25", features = ["derive"] }
anyhow = "1.0.102"
kamadak-exif = "0.6.1"
rawler = { git = "https://github.com/CyberTimon/RapidRAW-DngLab.git" }
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.23", features = ["v4", "serde"] }
walkdir = "2.5.0"
notify = "8.2.0"
imageproc = "0.27"
ndarray = "0.17"
tauri-plugin-process = "2.3.1"
tauri-plugin-os = "2.3.2"
log = "0.4"
fern = "0.7"
little_exif = "0.6.23"
chrono = "0.4"
once_cell = "1.21"
futures = "0.3.32"
sha2 = "0.11"
nalgebra = "0.35"
hex = "0.4"
rand = "0.10"
tauri-plugin-shell = "2.3.5"
tempfile = "3.27.0"
mimalloc = "0.1.50"
image_hasher = "3.1.1"
regex = "1.12.3"
memmap2 = "0.9.10"
half = { version = "2.7.1", features = ["bytemuck"] }
glam = "0.33"
quick-xml = { version = "0.41", features = ["serialize"] }
fuzzy-matcher = "0.3.7"
moxcms = "0.8.1"
filetime = "0.2"
libc = "0.2.186"
rgb = "0.8.53"
imgref = "1.12.1"
sysinfo = "0.39.3"
lcms2 = { version = "6.1.1", features = ["static"] }

[target.'cfg(any(target_os = "windows", target_os = "macos", target_os = "linux"))'.dependencies]
trash = "5.2.6"
tauri-plugin-single-instance = "2.4.2"
reqwest = { version = "0.13", default-features = false, features = ["json", "multipart", "rustls"] }

[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2"
objc2 = "0.6.4"
objc2-core-foundation = { version = "0.3.2", default-features = false, features = ["std"] }
objc2-core-video = { version = "0.3.2", default-features = false, features = ["CVBase", "CVBuffer", "CVImageBuffer", "CVPixelBuffer", "CVReturn"] }
objc2-foundation = { version = "0.3.2", default-features = false, features = ["NSArray", "NSData", "NSDictionary", "NSError", "NSObject", "NSString", "std"] }
objc2-vision = { version = "0.3.2", default-features = false, features = ["VNDetectFaceRectanglesRequest", "VNGeneratePersonSegmentationRequest", "VNObservation", "VNRequest", "VNRequestHandler", "VNStatefulRequest", "VNTypes", "objc2-core-foundation", "objc2-core-video"] }

[target.'cfg(target_os = "android")'.dependencies]
ndk-context = "0.1"
jni = "0.21"
reqwest = { version = "0.13", default-features = false, features = ["json", "multipart", "rustls"] }
include_dir = "0.7.4"

[target.'cfg(target_os = "linux")'.dependencies]
gtk = "0.18.2"
webkit2gtk = "=2.0.2"

[build-dependencies]
tauri-build = { version = "2.6", features = [] }

[dev-dependencies]
image-hdr = { version = "0.6.0", default-features = false }

[package.metadata.cargo-machete]
ignored = ["tauri-build"]

[profile.dev]
opt-level = 2
debug = 1
incremental = true

[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1
lto = true
strip = true

[lints.rust]
# The macOS objc::msg_send! macro expands through cfg(feature = "cargo-clippy").
# Declare that upstream cfg value as expected so checked-cfg stays strict.
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(feature, values("cargo-clippy"))'] }
